--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,13 +40,13 @@
     padding: 15px 40px;
     background-color: #59A5FF;
     color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid #F8F8F8;
     text-decoration: none;
     border-radius: 5px;
 }
 .expense-button:hover,
 .saving-button:hover{
-    background-color: #fff;
+    background-color: #F8F8F8;
     color: #59A5FF;
     border: 1px solid #59A5FF;
     transition: 0.4s;
