--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,12 @@
     width: 100%;
     height: 830px;
     object-fit: cover;
+    /* display: none; */
 }
 .calculation-section-right{
     background-color: #F8F8F8;
 }
-.income-input span{
+.income-total span{
     font-weight: 400;
     font-size: 18px;
 }
@@ -66,4 +67,14 @@
 {
     font-weight: 600;
     font-size: 22px;
+}
+.invalid-message, .balance-message{
+    color:red;
+    display: block;
+    text-align: left;
+    margin-left: 30px;
+    margin-top: 5px;
+    font-size: 11px;
+    text-align: center;
+
 }
