--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 .calculation-section-right{
     background-color: #F8F8F8;
 }
-.income-total span{
+.expense-input span,.income-total span{
     font-weight: 400;
     font-size: 18px;
 }
@@ -76,5 +76,29 @@
     margin-top: 5px;
     font-size: 11px;
     text-align: center;
+
+}
+
+
+@media only screen and (max-width: 992px) {
+    .heading{
+        font-size: 28px;
+    }
+    .calculation-section-left-img{
+        height: 350px;
+        /* display: none; */
+    }
+    .saving-button{
+        padding: 10px 18px;
+    }
+    .input-field-saving{
+        width: 80px;
+    }
+    .expense-input span,.income-total span{
+        font-weight: 400;
+        font-size: 13px;
+    }
+}
+@media only screen and (max-width: 662px) {
 
 }
